policies/istio-strict-mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default-strict-mtls
  namespace: ns-istio
spec:
  mtls:
    mode: STRICT
