policies/istio-dg-1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: payment-service-l7-protection
  namespace: ns-istio
spec:
  hosts:
  - payment-service
  http:
  - match:
    - port: 50051 # Target the gRPC port
      uri:
        exact: "/admin/keys" # Look for the HTTP path inside the gRPC port
    fault:
      abort:
        httpStatus: 403
        percentage:
          value: 100
    route:
    - destination:
        host: payment-service
  - route:
    - destination:
        host: payment-service
