policies/istio-ex-1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: google-com
  namespace: ns-istio
spec:
  hosts:
  - google.com
  ports:
  - number: 80
    name: http
    protocol: HTTP
  resolution: DNS
  location: MESH_EXTERNAL
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: block-google
  namespace: ns-istio
spec:
  hosts:
  - google.com
  http:
  - fault:
      abort:
        httpStatus: 403
        percentage:
          value: 100
    route:
    - destination:
        host: google.com # This doesn't matter because we abort
