policies/istio-dg-2.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: payment-l7-dg2
  namespace: ns-istio
spec:
  selector:
    matchLabels:
      app: payment-service
  action: DENY
  rules:
  - to:
    - operation:
        paths: ["/admin/keys"]
