policies/istio-jwt-auth.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: payment-jwt-auth
  namespace: ns-istio
spec:
  selector:
    matchLabels:
      app: payment-service
  jwtRules:
  - issuer: "testing@secure.istio.io"
    jwksUri: "https://raw.githubusercontent.com/istio/istio/master/security/tools/jwt/samples/jwks.json"
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: require-jwt-for-admin
  namespace: ns-istio
spec:
  selector:
    matchLabels:
      app: payment-service
  action: DENY
  rules:
  - from:
    - source:
        notRequestPrincipals: ["testing@secure.istio.io/*"]
    to:
    - operation:
        paths: ["/admin/keys"]
