policies/istio-secure-payment.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: block-admin-access
  namespace: ns-istio
spec:
  selector:
    matchLabels:
      app: payment-service
  action: DENY
  rules:
    - to:
        - operation:
            paths: ["/admin/keys"]
