policies/linkerd-ex-1.yaml
# 2. Allow only the legitimate /process endpoint inbound
apiVersion: policy.linkerd.io/v1beta3
kind: HTTPRoute
metadata:
  name: egress-payment-process-route
  namespace: ns-linkerd
spec:
  parentRefs:
    - name: egress-payment-80
      kind: Server
      group: policy.linkerd.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/process"
---
# 3. Authorize meshed identities to reach the allowed route
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: egress-allow-process
  namespace: ns-linkerd
spec:
  targetRef:
    group: policy.linkerd.io
    kind: HTTPRoute
    name: egress-payment-process-route
  requiredAuthenticationRefs:
    - name: egress-mesh-identity
      kind: MeshTLSAuthentication
      group: policy.linkerd.io
