policies/linkerd-ex-2.yaml
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: allow-all-payment
  namespace: ns-linkerd
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: payment-8080
  requiredAuthenticationRefs:
    - name: allow-all-network
      kind: NetworkAuthentication
      group: policy.linkerd.io
