policies/linkerd-http-2.yaml
# 2. Define the "Safe" Routes (Allow POST to /logs)
apiVersion: policy.linkerd.io/v1beta3
kind: HTTPRoute
metadata:
  name: audit-log-post-route
  namespace: ns-linkerd
spec:
  parentRefs:
    - name: audit-logger-8080
      kind: Server
      group: policy.linkerd.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/logs"
          method: POST
---
# 3. AUTHORIZE the "Safe" Route
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: allow-audit-post
  namespace: ns-linkerd
spec:
  targetRef:
    group: policy.linkerd.io
    kind: HTTPRoute
    name: audit-log-post-route
  requiredAuthenticationRefs:
    - name: allow-all-ips
      kind: NetworkAuthentication
      group: policy.linkerd.io
