policies/linkerd-ip-1.yaml
# 2. Define the "Sensitive" Route (DELETE /logs)
apiVersion: policy.linkerd.io/v1beta3
kind: HTTPRoute
metadata:
  name: audit-log-delete-route
  namespace: ns-linkerd
spec:
  parentRefs:
    - name: audit-logger-8080
      kind: Server
      group: policy.linkerd.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/logs"
          method: DELETE
---
# 3. AUTHORIZE DELETE only via mTLS Identity
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: allow-delete-only-self
  namespace: ns-linkerd
spec:
  targetRef:
    group: policy.linkerd.io
    kind: HTTPRoute
    name: audit-log-delete-route
  requiredAuthenticationRefs:
    - name: self-mtls-auth
      kind: MeshTLSAuthentication
      group: policy.linkerd.io
---
# 5. Allow standard POST /log from anywhere in the mesh
apiVersion: policy.linkerd.io/v1beta3
kind: HTTPRoute
metadata:
  name: audit-log-post-route
  namespace: ns-linkerd
spec:
  parentRefs:
    - name: audit-logger-8080
      kind: Server
      group: policy.linkerd.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/log"
          method: POST
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: allow-log-post-all
  namespace: ns-linkerd
spec:
  targetRef:
    group: policy.linkerd.io
    kind: HTTPRoute
    name: audit-log-post-route
  requiredAuthenticationRefs:
    - name: all-mesh-auth
      kind: MeshTLSAuthentication
      group: policy.linkerd.io
