policies/linkerd-jwt-auth.yaml
# 2. Define the "Safe" Route (/process)
apiVersion: policy.linkerd.io/v1beta3
kind: HTTPRoute
metadata:
  name: payment-process-route
  namespace: ns-linkerd
spec:
  parentRefs:
    - name: payment-8080
      kind: Server
      group: policy.linkerd.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/process"
---
# 3. AUTHORIZE the "Safe" Route
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: allow-process-mesh
  namespace: ns-linkerd
spec:
  targetRef:
    group: policy.linkerd.io
    kind: HTTPRoute
    name: payment-process-route
  requiredAuthenticationRefs:
    - name: any-mesh-identity
      kind: MeshTLSAuthentication
      group: policy.linkerd.io
