policies/linkerd-redis-policy.yaml
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: allow-all-mesh-to-redis
  namespace: ns-linkerd
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: redis-6379
  requiredAuthenticationRefs:
    - name: any-mesh-auth
      kind: MeshTLSAuthentication
      group: policy.linkerd.io
