policies/linkerd-rpc-1.yaml
# Define the "Safe" Routes
apiVersion: policy.linkerd.io/v1beta3
kind: HTTPRoute
metadata:
  name: payment-safe-routes
  namespace: ns-linkerd
spec:
  parentRefs:
    - name: payment-server
      kind: Server
      group: policy.linkerd.io
  rules:
    - matches:
        - path: { type: "PathPrefix", value: "/process" }
        - path: { type: "PathPrefix", value: "/health" }
---
# Authorize only the Safe Routes
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: allow-safe-payment-access
  namespace: ns-linkerd
spec:
  targetRef:
    group: policy.linkerd.io
    kind: HTTPRoute
    name: payment-safe-routes
  requiredAuthenticationRefs:
    - name: allow-all-network
      kind: NetworkAuthentication
      group: policy.linkerd.io
